--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>
             I am an Human resource generalist who is fascinated by Tech.
         </p>
-        <img class="avatar" src="images/" alt="An picture of aisha">
+        <img class="avatar" src="images/aisha.jpg" alt="An picture of aisha">
     </section>
     <section id="about">
         <h3>Hiya, I'm Aisha. Nice to meet you</h3>
